fix alignment issues on rtl text
fixes #164

--- a/iip_search_app/static/iip_search_app/css/tei_custom_elements.css
+++ b/iip_search_app/static/iip_search_app/css/tei_custom_elements.css
@@ -185,6 +185,10 @@ tei-gap[reason='ellipsis'] {
     /*?*/
 }
 
+tei-div, tei-p {
+    display: block;
+}
+
 /* Hebrew */
 [lang='heb'] {
     unicode-bidi: bidi-override;
